fix(locales): correct country and zone names for Saint Martin

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1356,8 +1356,8 @@
       "zoneName": "Montenegro"
     },
     "MF": {
-      "countryName": "Saint Martin",
-      "zoneName": "French"
+      "countryName": "France",
+      "zoneName": "Saint-Martin"
     },
     "MG": {
       "zoneName": "Madagascar"
