remove unused translations

--- a/web/public/locales/en.json
+++ b/web/public/locales/en.json
@@ -854,8 +854,7 @@
       "zoneName": "Montenegro"
     },
     "MF": {
-      "countryName": "Saint Martin",
-      "zoneName": "French"
+      "zoneName": "Saint-Martin"
     },
     "MG": {
       "zoneName": "Madagascar"
