fix(locales): correct country and zone names for Saint Martin en.json (#7887)
* fix(locales): correct country and zone names for Saint Martin

* Update web/src/locales/en.json

Co-authored-by: Viktor Andersson <30777521+VIKTORVAV99@users.noreply.github.com>

* remove unused translations

---------

Co-authored-by: Viktor Andersson <30777521+VIKTORVAV99@users.noreply.github.com>

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1356,8 +1356,7 @@
       "zoneName": "Montenegro"
     },
     "MF": {
-      "countryName": "Saint Martin",
-      "zoneName": "French"
+      "zoneName": "Saint-Martin"
     },
     "MG": {
       "zoneName": "Madagascar"
