--- a/web/public/locales/en.json
+++ b/web/public/locales/en.json
@@ -1281,6 +1281,10 @@
       "countryName": "USA",
       "zoneName": "Southeast Alaska Power Agency"
     },
+    "US-HI": {
+      "countryName": "USA",
+      "zoneName": "Hawaii"
+    },
     "US-HI-HA": {
       "countryName": "USA",
       "zoneName": "Hawaii"
