--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -12,7 +12,7 @@
     "title": "Electricity Grid Carbon Emissions",
     "subtitle": "See where your electricity comes from<br/> and how much CO2 was emitted to produce it",
     "search": "Search areas",
-    "no-results": "Nothing found, try searching for something else"
+    "no-results": "Nothing found. Try searching for something else."
   },
   "button": {
     "bluesky-share": "Check real-time global electricity emissions data: {{baseUrl}}",
