feat(app): change translation files to use flow data

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -96,7 +96,7 @@
     "title": "Data sources",
     "capacity": "Installed capacity data",
     "power": "Power generation data",
-    "exchange": "Exchange data",
+    "exchange": "Flow data",
     "emission": "Emission factor data"
   },
   "country-panel": {
@@ -114,12 +114,11 @@
       "licensing": "Electricity prices are unavailable for this area due to licensing terms"
     },
     "emissionFactorDataSourcesTooltip": "Electricity production emission factors can originate from multiple sources. This happens as several factors, like plant-specific data, generation and sometimes fallback sources, are considered in emission calculations.",
-    "disabledBreakdownChartReason": "Disabled for the consumption view. Please switch to the production view to enable the origin chart",
     "dataIsDelayed": "Data for this region can be up to {{hours}} hours delayed. Live data cannot be displayed.",
     "estimated": "estimated",
     "aggregated": "aggregated",
     "dataIsEstimated": "Some of the data for this region is estimated. Read more about our estimation methodology <a href='https://github.com/electricityMaps/electricitymaps-contrib/wiki/Estimation-methods' target='_blank'>here</a>.",
-    "exchangesAreMissing": "This chart does not include exchange data. Exchanges are visible in hourly views. Read more about our historical aggregations <a href='https://github.com/electricityMaps/electricitymaps-contrib/wiki/Historical-aggregates' target='_blank'>here</a>.",
+    "exchangesAreMissing": "This chart does not include flow data. Flows are visible in hourly views. Read more about our historical aggregations <a href='https://github.com/electricityMaps/electricitymaps-contrib/wiki/Historical-aggregates' target='_blank'>here</a>.",
     "estimatedTooltip": "The real-time data for this zone is estimated based on data from the source and the assumptions of the model.",
     "aggregatedTooltip": "The data for this zone is aggregated based on historical hourly values",
     "helpUs": "Help us identify the problem by taking a look at the <a href='{{link}}' target='_blank'>runtime logs</a> or contact the data provider.",
@@ -127,15 +126,13 @@
     "now": "Now",
     "by-source": {
       "emissions": "Carbon emissions",
-      "electricity-production": "Electricity production",
-      "electricity-consumption": "Electricity consumption",
-      "total-emissions": "Total carbon emissions",
-      "total-electricity-production": "Total electricity production",
-      "total-electricity-consumption": "Total electricity consumption"
+      "electricity-mix": "Electricity mix",
+      "total-electricity-mix": "Total electricity mix",
+      "total-emissions": "Total carbon emissions"
     },
     "graph-legends": {
       "installed-capacity": "Installed capacity ",
-      "exchange-capacity": "Available exchange capacity ",
+      "exchange-capacity": "Electricity flow capacity ",
       "exported": "Exported",
       "imported": "Imported",
       "stored": "Stored",
@@ -320,14 +317,14 @@
       "all_years": "Yearly electricity prices"
     },
     "netExchange": {
-      "72h": "Hourly net exchange",
-      "3mo": "Daily net exchange",
-      "12mo": "Monthly net exchange",
-      "all_months": "Monthly net exchange",
-      "all_years": "Yearly net exchange"
+      "72h": "Hourly electricity flow",
+      "3mo": "Daily electricity flow",
+      "12mo": "Monthly electricity flow",
+      "all_months": "Monthly electricity flow",
+      "all_years": "Yearly electricity flow"
     },
     "not-enough-data": "Not enough data available to display chart",
-    "exchange-delay": "Exchange data may be delayed by up to 48h."
+    "exchange-delay": "Flow data may be delayed by up to 48h."
   },
   "footer": {
     "foundbugs": "Found bugs or have ideas? Report them",
@@ -368,12 +365,12 @@
     "temporarilyUnavailable": "Temporarily unavailable",
     "production": "production",
     "consumption": "consumption",
-    "cpinfo": "<b>consumption</b> takes imports and exports into account, <b>production</b> ignores them",
+    "cpinfo": "<b>Flow-traced</b> takes imports and exports into account, <b>production</b> ignores them",
     "aggregateInfo": "Toggle between a granular zone view and an aggregated country view",
     "selectLanguage": "Select language",
     "dataIsDelayed": "Data is delayed",
     "price": "Price",
-    "netExchange": "Net exchange",
+    "netExchange": "Electricity flow",
     "importing": "Importing",
     "exporting": "Exporting"
   },
