--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -372,7 +372,9 @@
     "price": "Price",
     "netExchange": "Electricity flow",
     "importing": "Importing",
-    "exporting": "Exporting"
+    "exporting": "Exporting",
+    "flowTraced": "Flow-traced data accounts for physical electricity flow",
+    "nonFlowTraced": "Non-flow-traced data does not take imports and exports into account"
   },
   "aria": {
     "label": {
