--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -374,7 +374,7 @@
     "importing": "Importing",
     "exporting": "Exporting",
     "flowTraced": "Flow-traced data accounts for physical electricity flow",
-    "nonFlowTraced": "Non-flow-traced data does not take imports and exports into account"
+    "nonFlowTraced": "Non flow-traced data does not take imports and exports into account"
   },
   "aria": {
     "label": {
