--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -86,11 +86,7 @@
     "now": "Nu",
     "by-source": {
       "emissions": "Koldioxidutsläpp",
-      "electricity-production": "Elproduktion",
-      "electricity-consumption": "Elkonsumtion",
-      "total-emissions": "Totala koldioxidutsläpp",
-      "total-electricity-production": "Total elproduktion",
-      "total-electricity-consumption": "Total elkonsumtion"
+      "total-emissions": "Totala koldioxidutsläpp"
     },
     "electricityconsumption": "Elektricitet",
     "emissions": "Utsläpp",
