--- a/web/src/locales/pt-PT.json
+++ b/web/src/locales/pt-PT.json
@@ -74,11 +74,7 @@
     "now": "Agora",
     "by-source": {
       "emissions": "Emissões de carbono",
-      "electricity-production": "Produção de eletricidade",
-      "electricity-consumption": "Consumo de eletricidade",
-      "total-emissions": "Emissões totais de carbono",
-      "total-electricity-production": "Produção total de eletricidade",
-      "total-electricity-consumption": "Consumo total de eletricidade"
+      "total-emissions": "Emissões totais de carbono"
     }
   },
   "feedback-card": {
