--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -1189,7 +1189,7 @@
       "zoneName": "Lettonie"
     },
     "LY": {
-      "zoneName": "Libya"
+      "zoneName": "Libye"
     },
     "MA": {
       "zoneName": "Maroc"
