--- a/web/src/locales/de.json
+++ b/web/src/locales/de.json
@@ -47,6 +47,7 @@
     "emissions": "Emissionen",
     "by-source": {
       "emissions": "CO₂-Emissionen",
+      "electricity-mix": "Strommix",
       "total-emissions": "Gesamte CO₂-Emissionen"
     },
     "helpfrom": "mit Unterstützung von",
