--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -232,13 +232,13 @@
       "all_years": "Yearly data for:"
     },
     "72h": "72 hours",
-    "3mo": "3 months",
+    "3mo": "90 days",
     "12mo": "12 months",
     "all_months": "All months",
     "all_years": "All years",
     "historical-linking": {
       "72h": "72 hours",
-      "3mo": "3 months",
+      "3mo": "90 days",
       "12mo": "12 months",
       "all_months": "All months",
       "all_years": "All years"
