change imperative form into infinitive for some wordings

--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -3,20 +3,20 @@
     "title": "A propos d'Electricity Maps",
     "text": "est une plateforme API fournissant des signaux prédictifs et en temps réel sur l'électricité permettant à tout appareil de réduire ses coûts et ses émissions en l'informant du meilleur moment pour consommer de l'électricité.",
     "version": "Version de l'application: {{version}}",
-    "share-app": "Partagez l'application:"
+    "share-app": "Partager l'application:"
   },
   "button": {
     "bluesky-share": "Visualisez en temps réel les données mondiales sur les émissions d’électricité : {{baseUrl}}",
-    "reddit": "Rejoignez r/electricitymaps",
-    "reddit-share": "Partagez sur Reddit",
-    "github": "Contribuez sur GitHub",
-    "twitter": "Suivez nous sur X (Twitter)",
-    "twitter-share": "Partagez sur X (Twitter)",
-    "linkedin": "Suivez nous sur LinkedIn",
-    "linkedin-share": "Partagez sur LinkedIn",
-    "facebook": "Suivez nous sur Facebook",
-    "facebook-share": "Partagez sur Facebook",
-    "feedback": "Partagez vos commentaires",
+    "reddit": "Rejoindre r/electricitymaps",
+    "reddit-share": "Partager sur Reddit",
+    "github": "Contribuer sur GitHub",
+    "twitter": "Nous suivre sur X (Twitter)",
+    "twitter-share": "Partager sur X (Twitter)",
+    "linkedin": "Nous suivre sur LinkedIn",
+    "linkedin-share": "Partager sur LinkedIn",
+    "facebook": "Nous suivre sur Facebook",
+    "facebook-share": "Partager sur Facebook",
+    "feedback": "Partager vos commentaires",
     "faq": "FAQ",
     "privacy-policy": "Politique de confidentialité",
     "legal-notice": "Informations légales",
