feat(app): link from settings panel to flow-tracing blog

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -7,8 +7,7 @@
   },
   "settings-modal": {
     "title": "Settings",
-    "flows": "Electricity flows",
-    "flow-tracing": "Flow-tracing tracks how electricity physically moves through interconnectors that link different zones"
+    "flows": "Electricity flows"
   },
   "ranking-panel": {
     "title": "Electricity Grid Carbon Emissions",
