--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -231,18 +231,13 @@
       "all_months": "Monthly data for:",
       "all_years": "Yearly data for:"
     },
-    "72h": "72h",
-    "3mo": "3mo",
-    "12mo": "12mo",
-    "all_months": "All",
+    "72h": "72 hours",
+    "3mo": "90 days",
+    "12mo": "12 months",
+    "all_months": "All months",
     "all_years": "All years",
-    "historical-linking": {
-      "72h": "72h",
-      "3mo": "3mo",
-      "12mo": "12mo",
-      "all_months": "All",
-      "all_years": "All years"
-    },
+    "navigate": "Navigate",
+    "live": "Live",
     "date-unavailable": {
       "title": "Date unavailable",
       "description": "Redirecting to live data"
